--- a/accelerate_configs/ddp_1.yaml
+++ b/accelerate_configs/ddp_1.yaml
@@ -2,8 +2,8 @@ compute_environment: LOCAL_MACHINE
 debug: false
 distributed_type: MULTI_GPU
 downcast_bf16: 'no'
-gpu_ids: 0
-machine_rank: 0
+gpu_ids: 0,
+machine_rank: 0,
 main_training_function: main
 mixed_precision: bf16
 num_machines: 1
